2004-10-29  Mo DeJong  <mdejong@users.sourceforge.net>

	* tests/wm.test: Add Win32 test cases for attributes
	subcommand.
	* win/tkWinWm.c (WmAttributesCmd): Fixup broken
	option processing logic for attributes subcommand.

2004-10-29  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc (DOTVERSION): Was installing 8.4 relabelled as 8.5

	* library/tk.tcl (::tk::PlaceWindow): Backported the fix from 
	#533519 to handle window placement on multi-monitor Windows.

2004-10-28  Mo DeJong  <mdejong@users.sourceforge.net>

	* doc/wm.n: Add wm attributes . -alpha doc to account
	for recent alpha changes.

2004-10-28  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tkWin32Dll.c (DllMain, _except_dllmain_detach_handler):
	Back port HAVE_NO_SEH handler code from CVS HEAD to fix
	gcc build breakage caused by 2004-10-26 back port.

2004-10-28  Don Porter	<dgp@users.sourceforge.net>

	* README:				Bumped to patch level 8.4.8
	* generic/tk.h:				to prepare for next patch
	* macosx/Wish.pbproj/project.pbxproj:	release.
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:

	* unix/configure:	autoconf (2.13)
	* win/configure:

2004-10-28  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* unix/tkUnixScale.c (DisplayHorizontalValue): Backport fix for
	#220927 by Michael Schlenker to keep the labels within the window.

2004-10-28  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/*.n: Backport of minor documentation fixes.

2004-10-27  Don Porter	<dgp@users.sourceforge.net>

        * library/xmfbox.tcl (MotifFDialog_BuildUI): Fix [Bug 987169] in
        the Motif file dialogs as well.  Backport of DKF bug fix.

2004-10-26  David Gravereaux <davygrvy@pobox.com>

	* generic/tkInt.h:	Backport of shutdown safety mods from the HEAD
	* generic/tkMenu.c:	dating from 2003-12-21
	* generic/tkUtil.c:
	* generic/tkWindow.c:
	* mac/tkMacButton.c:
	* unix/tkUnixEvent.c:
	* win/tkWin32Dll.c:
	* win/tkWinEmbed.c:
	* win/tkWinMenu.c:
	* win/tkWinX.c:
