@@ -1,3 +1,11 @@
+2004-11-10  Jim Ingham  <jingham@apple.com>
+
+	From Michael Kirkham (mikek@muonics.com):
+	
+	* macosx/tkMacOSXButton.c (TkpDisplayButton): Don't set
+	the text if compound is NONE and we have and image.
+	[Bug 1055023]
+	
 2004-10-29  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* tests/wm.test: Add Win32 test cases for attributes
